--- a/src/AppBundle/Resources/views/Meat/Page/index.html.twig
+++ b/src/AppBundle/Resources/views/Meat/Page/index.html.twig
@@ -29,6 +29,8 @@
         <br>
         {{ browser.link }}
         <br>
+        {{ browser.getSupportedSystems|join(' | ') }}
+        <br>
     {% endfor %}
 {% endblock %}
 
