--- a/src/AppBundle/Resources/views/Meat/State/index.html.twig
+++ b/src/AppBundle/Resources/views/Meat/State/index.html.twig
@@ -1,17 +1,5 @@
-{# AppBundle/Resources/views/Meat/index.html.twig #}
-{% extends '::base.html.twig' %}
-
-{% block stylesheets %}
-    {% stylesheets
-        'bundles/app/Meat/css/css_1.css'
-        'bundles/app/Meat/css/css_2.css' output='compiled/Meat/css/main.css' filter='cssrewrite' %}
-        <link rel="stylesheet" href="{{ asset_url }}" />
-    {% endstylesheets %}
-    {% stylesheets
-        'bundles/app/Meat/css/css_3.css' output='compiled/Meat/css/additional.css' filter='cssrewrite' %}
-    <link rel="stylesheet" href="{{ asset_url }}" />
-    {% endstylesheets %}
-{% endblock %}
+{# src/AppBundle/Resources/views/Meat/State/index.html.twig #}
+{% extends '::layout.html.twig' %}
 
 {% block body %}
     {% render controller('AppBundle:Meat\\Api:widget', { 'browsers': browsers }) %}
@@ -121,16 +109,4 @@
             {{ 'content_api.guide.additional'|trans }}: <a href="https://github.com/CheersUnlimited/BrAsst/apiExamples">{{ 'content_api.github'|trans }}</a>
         </p>
     </div>
-{% endblock %}
-
-{% block javascripts %}
-    {% javascripts
-        'bundles/app/Meat/js/js_1.js'
-        'bundles/app/Meat/js/js_2.js' output='compiled/Meat/js/main.js' %}
-        <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
-    {% javascripts
-        'bundles/app/Meat/js/js_3.js' output='compiled/Meat/js/additional.js' %}
-        <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
 {% endblock %}
